basic auth middleware; loginHandlerPOST
